--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - app-network
     volumes:
       - mongo-data:/data/db
+    command: "mongod --quiet --logpath /dev/null "
 
   app:
     build: .
